<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ui.base.activity.BuscarCepActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/correios_log"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/buscarCEP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="8"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/buscar_cep"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_nova_consulta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/nova_consulta"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_buscar"
            app:layout_constraintEnd_toStartOf="@+id/btn_buscar" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="64dp"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:clipToPadding="false"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_buscar"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contrain_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!--Inicio Logradouro-->
                <TextView
                    android:id="@+id/lbl_logradouro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/logradouro"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contrain_result" />

                <TextView
                    android:id="@+id/txt_logradouro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lbl_logradouro"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/lbl_logradouro"
                    app:layout_constraintTop_toTopOf="@+id/lbl_logradouro"
                    tools:text="Rua Dr. Plinio Barreto" />
                <!--Fim Logradouro-->

                <!--Inicio Complemento-->
                <TextView
                    android:id="@+id/lbl_complemento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/complemento"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/lbl_logradouro"
                    app:layout_constraintTop_toBottomOf="@id/lbl_logradouro" />

                <TextView
                    android:id="@+id/txt_complemento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lbl_complemento"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/lbl_complemento"
                    app:layout_constraintTop_toTopOf="@+id/lbl_complemento"
                    tools:text="Em frente a pç 14 bis" />
                <!--Fim Complemento-->

                <!--Inicio Bairro-->
                <TextView
                    android:id="@+id/lbl_bairro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/bairro"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/lbl_complemento"
                    app:layout_constraintTop_toBottomOf="@id/lbl_complemento" />

                <TextView
                    android:id="@+id/txt_bairro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lbl_bairro"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/lbl_bairro"
                    app:layout_constraintTop_toTopOf="@+id/lbl_bairro"
                    tools:text="Bela Vista" />
                <!--Fim Bairro-->

                <!--Inicio Localidade-->
                <TextView
                    android:id="@+id/lbl_localidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/localidade"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/lbl_bairro"
                    app:layout_constraintTop_toBottomOf="@id/lbl_bairro" />

                <TextView
                    android:id="@+id/txt_localidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lbl_localidade"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/lbl_localidade"
                    app:layout_constraintTop_toTopOf="@+id/lbl_localidade"
                    tools:text="São Paulo" />
                <!--Fim Localidade-->

                <!--Inicio UF-->
                <TextView
                    android:id="@+id/lbl_uf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/uf"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/lbl_localidade"
                    app:layout_constraintTop_toBottomOf="@id/lbl_localidade"

                    />

                <TextView
                    android:id="@+id/txt_uf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lbl_uf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/lbl_uf"
                    app:layout_constraintTop_toTopOf="@+id/lbl_uf"
                    tools:text="SP" />
                <!--Fim UF-->


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>